src/frontend/syntactic-analyser/bonus-files/Parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On T_void shift to state 1
-- On T_int shift to state 10
-- On T_include shift to state 190
-- On T_double shift to state 14
-- On T_char shift to state 16
-- On T_bool shift to state 18
-- On variable_declaration shift to state 26
-- On program shift to state 191
-- On nonempty_list(line) shift to state 192
-- On line shift to state 194
-- On function_definition shift to state 164
-- On function_declaration shift to state 165
-- On declaration shift to state 196
-- On data_type shift to state 168
## Reductions:

State 1:
## Known stack suffix:
## T_void
## LR(1) items:
function_declaration -> T_void . T_id T_leftpar loption(separated_nonempty_list(T_comma,parameter)) T_rightpar T_semicolon [ T_void T_true T_times T_string T_semicolon T_rightbr T_return T_ref T_plusplus T_plus T_not T_new T_minusminus T_minus T_leftpar T_leftbr T_int T_include T_if T_id T_for T_false T_eof T_double T_delete T_continue T_constreal T_constint T_constchar T_char T_break T_bool T_NULL ]
function_definition -> T_void . T_id T_leftpar loption(separated_nonempty_list(T_comma,parameter)) T_rightpar T_leftbr list(declaration) list(statement) T_rightbr [ T_void T_true T_times T_string T_semicolon T_rightbr T_return T_ref T_plusplus T_plus T_not T_new T_minusminus T_minus T_leftpar T_leftbr T_int T_include T_if T_id T_for T_false T_eof T_double T_delete T_continue T_constreal T_constint T_constchar T_char T_break T_bool T_NULL ]
## Transitions:
-- On T_id shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## T_void T_id
## LR(1) items:
function_declaration -> T_void T_id . T_leftpar loption(separated_nonempty_list(T_comma,parameter)) T_rightpar T_semicolon [ T_void T_true T_times T_string T_semicolon T_rightbr T_return T_ref T_plusplus T_plus T_not T_new T_minusminus T_minus T_leftpar T_leftbr T_int T_include T_if T_id T_for T_false T_eof T_double T_delete T_continue T_constreal T_constint T_constchar T_char T_break T_bool T_NULL ]
function_definition -> T_void T_id . T_leftpar loption(separated_nonempty_list(T_comma,parameter)) T_rightpar T_leftbr list(declaration) list(statement) T_rightbr [ T_void T_true T_times T_string T_semicolon T_rightbr T_return T_ref T_plusplus T_plus T_not T_new T_minusminus T_minus T_leftpar T_leftbr T_int T_include T_if T_id T_for T_false T_eof T_double T_delete T_continue T_constreal T_constint T_constchar T_char T_break T_bool T_NULL ]
## Transitions:
-- On T_leftpar shift to state 3
## Reductions:

State 3:
## Known stack suffix:
## T_void T_id T_leftpar
## LR(1) items:
function_declaration -> T_void T_id T_leftpar . loption(separated_nonempty_list(T_comma,parameter)) T_rightpar T_semicolon [ T_void T_true T_times T_string T_semicolon T_rightbr T_return T_ref T_plusplus T_plus T_not T_new T_minusminus T_minus T_leftpar T_leftbr T_int T_include T_if T_id T_for T_false T_eof T_double T_delete T_continue T_constreal T_constint T_constchar T_char T_break T_bool T_NULL ]
function_definition -> T_void T_id T_leftpar . loption(separated_nonempty_list(T_comma,parameter)) T_rightpar T_leftbr list(declaration) list(statement) T_rightbr [ T_void T_true T_times T_string T_semicolon T_rightbr T_return T_ref T_plusplus T_plus T_not T_new T_minusminus T_minus T_leftpar T_leftbr T_int T_include T_if T_id T_for T_false T_eof T_double T_delete T_continue T_constreal T_constint T_constchar T_char T_break T_bool T_NULL ]
## Transitions:
-- On T_byref shift to state 4
-- On separated_nonempty_list(T_comma,parameter) shift to state 5
-- On parameter shift to state 6
-- On option(T_byref) shift to state 9
-- On loption(separated_nonempty_list(T_comma,parameter)) shift to state 22
## Reductions:
-- On T_rightpar
--   reduce production loption(separated_nonempty_list(T_comma,parameter)) ->
-- On T_int T_double T_char T_bool
--   reduce production option(T_byref) ->

State 4:
## Known stack suffix:
## T_byref
## LR(1) items:
option(T_byref) -> T_byref . [ T_int T_double T_char T_bool ]
## Transitions:
## Reductions:
-- On T_int T_double T_char T_bool
--   reduce production option(T_byref) -> T_byref

State 5:
## Known stack suffix:
## separated_nonempty_list(T_comma,parameter)
## LR(1) items:
loption(separated_nonempty_list(T_comma,parameter)) -> separated_nonempty_list(T_comma,parameter) . [ T_rightpar ]
## Transitions:
## Reductions:
-- On T_rightpar
--   reduce production loption(separated_nonempty_list(T_comma,parameter)) -> separated_nonempty_list(T_comma,parameter)

State 6:
## Known stack suffix:
## parameter
## LR(1) items:
separated_nonempty_list(T_comma,parameter) -> parameter . [ T_rightpar ]
separated_nonempty_list(T_comma,parameter) -> parameter . T_comma separated_nonempty_list(T_comma,parameter) [ T_rightpar ]
## Transitions:
-- On T_comma shift to state 7
## Reductions:
-- On T_rightpar
--   reduce production separated_nonempty_list(T_comma,parameter) -> parameter

State 7:
## Known stack suffix:
## parameter T_comma
## LR(1) items:
separated_nonempty_list(T_comma,parameter) -> parameter T_comma . separated_nonempty_list(T_comma,parameter) [ T_rightpar ]
## Transitions:
-- On T_byref shift to state 4
-- On separated_nonempty_list(T_comma,parameter) shift to state 8
-- On parameter shift to state 6
-- On option(T_byref) shift to state 9
## Reductions:
-- On T_int T_double T_char T_bool
--   reduce production option(T_byref) ->

State 8:
## Known stack suffix:
## parameter T_comma separated_nonempty_list(T_comma,parameter)
## LR(1) items:
separated_nonempty_list(T_comma,parameter) -> parameter T_comma separated_nonempty_list(T_comma,parameter) . [ T_rightpar ]
## Transitions:
## Reductions:
-- On T_rightpar
--   reduce production separated_nonempty_list(T_comma,parameter) -> parameter T_comma separated_nonempty_list(T_comma,parameter)

State 9:
## Known stack suffix:
## option(T_byref)
## LR(1) items:
parameter -> option(T_byref) . data_type T_id [ T_rightpar T_comma ]
## Transitions:
-- On T_int shift to state 10
-- On T_double shift to state 14
-- On T_char shift to state 16
-- On T_bool shift to state 18
-- On data_type shift to state 20
## Reductions:

State 10:
## Known stack suffix:
## T_int
## LR(1) items:
data_type -> T_int . pointer [ T_timesequals T_times T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_id T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and ]
## Transitions:
-- On T_times shift to state 11
-- On pointer shift to state 13
## Reductions:
-- On T_timesequals T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_id T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and
--   reduce production pointer ->

State 11:
## Known stack suffix:
## T_times
## LR(1) items:
pointer -> T_times . pointer [ T_timesequals T_times T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_id T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and ]
## Transitions:
-- On T_times shift to state 11
-- On pointer shift to state 12
## Reductions:
-- On T_timesequals T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_id T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and
--   reduce production pointer ->

State 12:
## Known stack suffix:
## T_times pointer
## LR(1) items:
pointer -> T_times pointer . [ T_timesequals T_times T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_id T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and ]
## Transitions:
## Reductions:
-- On T_timesequals T_times T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_id T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and
--   reduce production pointer -> T_times pointer

State 13:
## Known stack suffix:
## T_int pointer
## LR(1) items:
data_type -> T_int pointer . [ T_timesequals T_times T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_id T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and ]
## Transitions:
## Reductions:
-- On T_timesequals T_times T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_id T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and
--   reduce production data_type -> T_int pointer

State 14:
## Known stack suffix:
## T_double
## LR(1) items:
data_type -> T_double . pointer [ T_timesequals T_times T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_id T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and ]
## Transitions:
-- On T_times shift to state 11
-- On pointer shift to state 15
## Reductions:
-- On T_timesequals T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_id T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and
--   reduce production pointer ->

State 15:
## Known stack suffix:
## T_double pointer
## LR(1) items:
data_type -> T_double pointer . [ T_timesequals T_times T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_id T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and ]
## Transitions:
## Reductions:
-- On T_timesequals T_times T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_id T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and
--   reduce production data_type -> T_double pointer

State 16:
## Known stack suffix:
## T_char
## LR(1) items:
data_type -> T_char . pointer [ T_timesequals T_times T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_id T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and ]
## Transitions:
-- On T_times shift to state 11
-- On pointer shift to state 17
## Reductions:
-- On T_timesequals T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_id T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and
--   reduce production pointer ->

State 17:
## Known stack suffix:
## T_char pointer
## LR(1) items:
data_type -> T_char pointer . [ T_timesequals T_times T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_id T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and ]
## Transitions:
## Reductions:
-- On T_timesequals T_times T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_id T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and
--   reduce production data_type -> T_char pointer

State 18:
## Known stack suffix:
## T_bool
## LR(1) items:
data_type -> T_bool . pointer [ T_timesequals T_times T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_id T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and ]
## Transitions:
-- On T_times shift to state 11
-- On pointer shift to state 19
## Reductions:
-- On T_timesequals T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_id T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and
--   reduce production pointer ->

State 19:
## Known stack suffix:
## T_bool pointer
## LR(1) items:
data_type -> T_bool pointer . [ T_timesequals T_times T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_id T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and ]
## Transitions:
## Reductions:
-- On T_timesequals T_times T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_id T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and
--   reduce production data_type -> T_bool pointer

State 20:
## Known stack suffix:
## option(T_byref) data_type
## LR(1) items:
parameter -> option(T_byref) data_type . T_id [ T_rightpar T_comma ]
## Transitions:
-- On T_id shift to state 21
## Reductions:

State 21:
## Known stack suffix:
## option(T_byref) data_type T_id
## LR(1) items:
parameter -> option(T_byref) data_type T_id . [ T_rightpar T_comma ]
## Transitions:
## Reductions:
-- On T_rightpar T_comma
--   reduce production parameter -> option(T_byref) data_type T_id

State 22:
## Known stack suffix:
## T_void T_id T_leftpar loption(separated_nonempty_list(T_comma,parameter))
## LR(1) items:
function_declaration -> T_void T_id T_leftpar loption(separated_nonempty_list(T_comma,parameter)) . T_rightpar T_semicolon [ T_void T_true T_times T_string T_semicolon T_rightbr T_return T_ref T_plusplus T_plus T_not T_new T_minusminus T_minus T_leftpar T_leftbr T_int T_include T_if T_id T_for T_false T_eof T_double T_delete T_continue T_constreal T_constint T_constchar T_char T_break T_bool T_NULL ]
function_definition -> T_void T_id T_leftpar loption(separated_nonempty_list(T_comma,parameter)) . T_rightpar T_leftbr list(declaration) list(statement) T_rightbr [ T_void T_true T_times T_string T_semicolon T_rightbr T_return T_ref T_plusplus T_plus T_not T_new T_minusminus T_minus T_leftpar T_leftbr T_int T_include T_if T_id T_for T_false T_eof T_double T_delete T_continue T_constreal T_constint T_constchar T_char T_break T_bool T_NULL ]
## Transitions:
-- On T_rightpar shift to state 23
## Reductions:

State 23:
## Known stack suffix:
## T_void T_id T_leftpar loption(separated_nonempty_list(T_comma,parameter)) T_rightpar
## LR(1) items:
function_declaration -> T_void T_id T_leftpar loption(separated_nonempty_list(T_comma,parameter)) T_rightpar . T_semicolon [ T_void T_true T_times T_string T_semicolon T_rightbr T_return T_ref T_plusplus T_plus T_not T_new T_minusminus T_minus T_leftpar T_leftbr T_int T_include T_if T_id T_for T_false T_eof T_double T_delete T_continue T_constreal T_constint T_constchar T_char T_break T_bool T_NULL ]
function_definition -> T_void T_id T_leftpar loption(separated_nonempty_list(T_comma,parameter)) T_rightpar . T_leftbr list(declaration) list(statement) T_rightbr [ T_void T_true T_times T_string T_semicolon T_rightbr T_return T_ref T_plusplus T_plus T_not T_new T_minusminus T_minus T_leftpar T_leftbr T_int T_include T_if T_id T_for T_false T_eof T_double T_delete T_continue T_constreal T_constint T_constchar T_char T_break T_bool T_NULL ]
## Transitions:
-- On T_semicolon shift to state 24
-- On T_leftbr shift to state 25
## Reductions:

State 24:
## Known stack suffix:
## T_void T_id T_leftpar loption(separated_nonempty_list(T_comma,parameter)) T_rightpar T_semicolon
## LR(1) items:
function_declaration -> T_void T_id T_leftpar loption(separated_nonempty_list(T_comma,parameter)) T_rightpar T_semicolon . [ T_void T_true T_times T_string T_semicolon T_rightbr T_return T_ref T_plusplus T_plus T_not T_new T_minusminus T_minus T_leftpar T_leftbr T_int T_include T_if T_id T_for T_false T_eof T_double T_delete T_continue T_constreal T_constint T_constchar T_char T_break T_bool T_NULL ]
## Transitions:
## Reductions:
-- On T_void T_true T_times T_string T_semicolon T_rightbr T_return T_ref T_plusplus T_plus T_not T_new T_minusminus T_minus T_leftpar T_leftbr T_int T_include T_if T_id T_for T_false T_eof T_double T_delete T_continue T_constreal T_constint T_constchar T_char T_break T_bool T_NULL
--   reduce production function_declaration -> T_void T_id T_leftpar loption(separated_nonempty_list(T_comma,parameter)) T_rightpar T_semicolon

State 25:
## Known stack suffix:
## T_void T_id T_leftpar loption(separated_nonempty_list(T_comma,parameter)) T_rightpar T_leftbr
## LR(1) items:
function_definition -> T_void T_id T_leftpar loption(separated_nonempty_list(T_comma,parameter)) T_rightpar T_leftbr . list(declaration) list(statement) T_rightbr [ T_void T_true T_times T_string T_semicolon T_rightbr T_return T_ref T_plusplus T_plus T_not T_new T_minusminus T_minus T_leftpar T_leftbr T_int T_include T_if T_id T_for T_false T_eof T_double T_delete T_continue T_constreal T_constint T_constchar T_char T_break T_bool T_NULL ]
## Transitions:
-- On T_void shift to state 1
-- On T_int shift to state 10
-- On T_double shift to state 14
-- On T_char shift to state 16
-- On T_bool shift to state 18
-- On variable_declaration shift to state 26
-- On list(declaration) shift to state 27
-- On function_definition shift to state 164
-- On function_declaration shift to state 165
-- On declaration shift to state 166
-- On data_type shift to state 168
## Reductions:
-- On T_true T_times T_string T_semicolon T_rightbr T_return T_ref T_plusplus T_plus T_not T_new T_minusminus T_minus T_leftpar T_leftbr T_if T_id T_for T_false T_delete T_continue T_constreal T_constint T_constchar T_break T_NULL
--   reduce production list(declaration) ->

State 26:
## Known stack suffix:
## variable_declaration
## LR(1) items:
declaration -> variable_declaration . [ T_void T_true T_times T_string T_semicolon T_rightbr T_return T_ref T_plusplus T_plus T_not T_new T_minusminus T_minus T_leftpar T_leftbr T_int T_include T_if T_id T_for T_false T_eof T_double T_delete T_continue T_constreal T_constint T_constchar T_char T_break T_bool T_NULL ]
## Transitions:
## Reductions:
-- On T_void T_true T_times T_string T_semicolon T_rightbr T_return T_ref T_plusplus T_plus T_not T_new T_minusminus T_minus T_leftpar T_leftbr T_int T_include T_if T_id T_for T_false T_eof T_double T_delete T_continue T_constreal T_constint T_constchar T_char T_break T_bool T_NULL
--   reduce production declaration -> variable_declaration

State 27:
## Known stack suffix:
## T_void T_id T_leftpar loption(separated_nonempty_list(T_comma,parameter)) T_rightpar T_leftbr list(declaration)
## LR(1) items:
function_definition -> T_void T_id T_leftpar loption(separated_nonempty_list(T_comma,parameter)) T_rightpar T_leftbr list(declaration) . list(statement) T_rightbr [ T_void T_true T_times T_string T_semicolon T_rightbr T_return T_ref T_plusplus T_plus T_not T_new T_minusminus T_minus T_leftpar T_leftbr T_int T_include T_if T_id T_for T_false T_eof T_double T_delete T_continue T_constreal T_constint T_constchar T_char T_break T_bool T_NULL ]
## Transitions:
-- On T_true shift to state 28
-- On T_times shift to state 29
-- On T_string shift to state 30
-- On T_semicolon shift to state 117
-- On T_return shift to state 118
-- On T_ref shift to state 31
-- On T_plusplus shift to state 32
-- On T_plus shift to state 33
-- On T_not shift to state 34
-- On T_new shift to state 35
-- On T_minusminus shift to state 38
-- On T_minus shift to state 39
-- On T_leftpar shift to state 40
-- On T_leftbr shift to state 121
-- On T_if shift to state 122
-- On T_id shift to state 126
-- On T_for shift to state 136
-- On T_false shift to state 43
-- On T_delete shift to state 44
-- On T_continue shift to state 144
-- On T_constreal shift to state 45
-- On T_constint shift to state 46
-- On T_constchar shift to state 47
-- On T_break shift to state 148
-- On T_NULL shift to state 48
-- On statement shift to state 158
-- On list(statement) shift to state 162
-- On expression shift to state 152
-- On dynamic_allocation shift to state 58
## Reductions:
-- On T_rightbr
--   reduce production list(statement) ->

State 28:
## Known stack suffix:
## T_true
## LR(1) items:
expression -> T_true . [ T_timesequals T_times T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and ]
## Transitions:
## Reductions:
-- On T_timesequals T_times T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and
--   reduce production expression -> T_true

State 29:
## Known stack suffix:
## T_times
## LR(1) items:
expression -> T_times . expression [ T_timesequals T_times T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and ]
## Transitions:
-- On T_true shift to state 28
-- On T_times shift to state 29
-- On T_string shift to state 30
-- On T_ref shift to state 31
-- On T_plusplus shift to state 32
-- On T_plus shift to state 33
-- On T_not shift to state 34
-- On T_new shift to state 35
-- On T_minusminus shift to state 38
-- On T_minus shift to state 39
-- On T_leftpar shift to state 40
-- On T_id shift to state 41
-- On T_false shift to state 43
-- On T_delete shift to state 44
-- On T_constreal shift to state 45
-- On T_constint shift to state 46
-- On T_constchar shift to state 47
-- On T_NULL shift to state 48
-- On expression shift to state 116
-- On dynamic_allocation shift to state 58
## Reductions:

State 30:
## Known stack suffix:
## T_string
## LR(1) items:
expression -> T_string . [ T_timesequals T_times T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and ]
## Transitions:
## Reductions:
-- On T_timesequals T_times T_semicolon T_rightsqbr T_rightpar T_question T_plusplus T_plusequals T_plus T_or T_neq T_modequals T_mod T_minusminus T_minusequals T_minus T_lt T_leftsqbr T_le T_gt T_ge T_eq T_divequals T_div T_comma T_colon T_assign T_and
--   reduce production expression -> T_string
